# for display continuity sake please use 2 spaces instead of tabs

2012-02-24 mmichaud <michael.michaud@free.fr>
  * Bug #3487686 BeanshellEditor : the window focus problem between OpenJUMP
    and BeanshellEditor should be solved (in LayerViewPanel class)

2012-02-23 mmichaud <michael.michaud@free.fr>
  * Bug #3486847 Wrong Dialog message when Closing project
  * Bug #3491956 Union of overlapping lines could not be merged

2012-02-22 mmichaud <michael.michaud@free.fr>
  * Bug #3488976 : fixed problems in the Noder plugin except one depending on a
    new version of JTS (preserving z with snap-rounding noder). There is still
    room for optimization in this plugin.
  # Bug 3488028 : datasets read from a zip file are made readonly
    (org.openjump.core.ui.io.file.DataSourceFileLayerLoader)

2012-02-19 mmichaud <michael.michaud@free.fr>
  * Improved SnapToGridPolicy to avoid floating point issue with fractional
    grid size (872939.1 -> 872939.1000000001)

2012-02-18 mmichaud <michael.michaud@free.fr>
  * Buffer Plugin
      - Simplify error management in BufferPlugIn
      - Bugs #3488974 : pre-processing the geometry with a douglas-peucker 
        simplification using 0.0 tolerance makes the process a bit more robust.
  * FillPolygonPlugIn
      - Bug #3489026 : added a progress bar when FillPolygon takes time to 
        Polygonize the Dataset
      - Bug #3489028 : make a strict intersection test to return the right 
        Polygon

2012-02-12 mmichaud <michael.michaud@free.fr>
  * Reactivated the North-Arrow plugin (in view menu)

2012-01-25 sstein <sstein@geo.uzh.ch>
  * adjusted terminology:
    - "Overlay Polygon Layers" to "Polygon Overlay", with the 
    latter being the formal term
    - "Spatial Join" to "Spatial Join (Transfer Attributes)" to be 
    consistent as the item was renamed first (original name: "Transfer Attributes") 
    and then moved to a different menu (Edit Attributes -> Analysis), 